fix info text contrast

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -212,7 +212,7 @@ $au-non-editable-background    : $au-gray-100 !default;
   @include au-font-size($au-base);
   font-family: $au-font;
   font-weight: $au-regular;
-  color: $au-gray-600;
+  color: $au-gray-700;
   font-style: italic;
 }
 
